<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
 
  <!-- SuperPom that defines default/shared values -->
  <modelVersion>4.0.0</modelVersion>
  <groupId>tv.not</groupId>
  <artifactId>notTV</artifactId>
  <packaging>pom</packaging>
  <version>1.0</version>

  <!-- Also aggregates the submodules. -->
  <modules>
    <module>mediabox</module>
    <module>server</module>
    <module>tracker</module>
  </modules>
  
  <!-- Developers (optional) -->
  <developers>
    <developer>
      <id>levimiller</id>
      <name>Levi Miller</name>
      <email>levi@levimiller.ca</email>
      <roles>
	<role>Technical Lead</role>
      </roles>
    </developer>
    <!-- I'm not doing this, insert yourself lol. -->
  </developers>

  <!-- Licences (Only apache because of bt) -->
  <licenses>
    <license>
      <name>Apache License 2.0</name>
      <url>https://github.com/norberte/notTV-Capstone/blob/master/LICENSE</url> <!-- update license to be Apache -->
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <java.version>1.8</java.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- <jetty.version>8.1.8.v20121106</jetty.version> -->
    <jetty.version>8.1.15.v20140411</jetty.version>
    <jetty-jsp.version>2.2.0.v201112011158</jetty-jsp.version>
  </properties>
  
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>1.5.8.RELEASE</version>
  </parent>
  
  <!-- Dependencies -->
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <exclusions>
	<exclusion>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-starter-tomcat</artifactId>
	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jetty</artifactId>
      <exclusions>
	<exclusion>
	  <groupId>org.eclipse.jetty.websocket</groupId>
	  <artifactId>*</artifactId>
	</exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
